--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="row">
             <ul>
                 <li>Infox sur Seine,  workshop, Paris, France, 2023, presentation</li>
-                <li>CoNEXT 2022, student workshop, Rone, Italy, 2022, presentation</li>
+                <li>CoNEXT 2022, student workshop, Rome, Italy, 2022, presentation</li>
                 <li>Inria-DFKI European Summer School on AI, Saarbrücken, Germany, 2022, contributed talk </li>
             </ul>
         </div>
