--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <h2> Events </h2>
                 <div class="row">
             <ul>
+            	<li>IC2S2, workshop, Copenhagen, Denmark, 2023, poster</li>
                 <li>Infox sur Seine,  workshop, Paris, France, 2023, presentation</li>
                 <li>CoNEXT 2022, student workshop, Rome, Italy, 2022, presentation</li>
                 <li>Inria-DFKI European Summer School on AI, Saarbrücken, Germany, 2022, contributed talk </li>
